testnamespacecreation.yml
---

apiVersion: v1
kind: Namespace
metadata:
        name: aviva-workspace
        generateName: aviva
        labels:
                client: "Aviva"
                owner: "IDM"
