Hello-World.yml
apiVersion: v1
kind: Pod
metadata:
  name: HelloWorld
  labels:
    app: myapplication
spec:
  - image:  Hello-World
    name:  my-helloapp
