testvim2containercreation.yml
---

apiVersion: v1
kind: Pod
metadata:
        name: testmeonceagain
        labels:
                env: test
        namespace: default
spec:
        containers:
                -  name: nginxcontainer
                   image: nginx:latest
                   ports:
                           -  containerPort: 80
                              protocol: TCP
                -  name: container2
                   image: nginx:alpine
                   ports:
                           -  containerPort: 81
                              protocol: TCP

                              

...
