testvimpodcreation.yml
---

apiVersion: v1
kind: Pod
metadata:
        name: testme
        labels:
                env: test
#       namespace: default
spec:
        containers:
                -  name: nginxcontainer
                   image: nginx:latest
                   ports:
                           -  containerPort: 80
                              protocol: TCP
                              

...
