test_extername_service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: ExternalName
  externalName: www.google.com
  ports:
  -  port: 80
