test_nodeport_service.yml
apiVersion: v1
kind: Service
metadata:
  name: tmnl-nodeport-portals
spec:
  type: NodePort
  selector:
    client: "TMNL"
    appName: "portals"
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31162
