test_service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: tmnl-portals-service
  labels:
    app: "portals"
    client: "tmnl"
    env: "dev"
spec:
  ports:
  -  port: 8080
     targetPort: 80
  selector:
    client: "TMNL"
    appName: "portals"
